--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "classnames": "^2.2.5",
     "express": "~4.11.2",
+    "mustache": "^2.2.1",
     "serialport": "^2.1.0",
     "socket.io": "~1.3.4"
   },
