--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "socket.io": "~1.3.4"
   },
   "scripts": {
-    "start": "node server.js",
-    "dev": "NODE_ENV=development node server.js"
+    "start": "set NODE_ENV=production&& node server.js",
+    "dev": "set NODE_ENV=development&& node server.js"
   }
 }
